--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -96,7 +96,9 @@ ul li{
 .dropdown-menu a {
   color: #000 !important;
 }
-
+#rightnavbar{
+  right: 0%;
+}
 #topnavbar {
   font-family: "signikaregular";
   position: absolute;
@@ -110,6 +112,12 @@ ul li{
   top: 35%;
   right: 10%;
 }
+#topnavbar3 {
+  font-family: "signikaregular";
+  position: absolute;
+  top: 37.3%;
+  right: 7%;
+}
 
 /* Colors */
 #colorblack {
@@ -120,11 +128,14 @@ ul li{
   color: #FF0120;
 }
 
+#tachado{
+  text-decoration: line-through;
+}
 .imgpost {
-  width: 325px;
-  height: 375px;
-  padding: 0px;
+  width: 450px;
+  height: 400px;
   border-radius: 2%;
+  margin-left: 12em;
 }
 
 .postsRow {
