error adding post or categories with foto

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,11 +25,11 @@
                      Hombre
                         </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-    {#                           <li><a class="dropdown-item" href="{{path('Registrar-Posts')}}">Pijamas</a></li>
-                        <li><a class="dropdown-item" href="{{path('Registrar-Posts')}}">Camisetas interiores</a></li>
-                        <li><a class="dropdown-item" href="{{path('Registrar-Posts')}}">Boxer</a></li>
-                         <li><a class="dropdown-item" href="{{path('registro')}}">Calzoncillos</a></li>
-                        <li><a class="dropdown-item" href="{{path('app_login')}}">Calcetines</a></li> #}
+                        <li><a class="dropdown-item" href="{{path('category_show',{id:1})}}">Pijamas</a></li>
+                        <li><a class="dropdown-item" href="{{path('category_show',{id:2})}}">Camisetas interiores</a></li>
+                        <li><a class="dropdown-item" href="{{path('category_show',{id:4})}}">Boxer</a></li>
+                        <li><a class="dropdown-item" href="{{path('category_show',{id:5})}}">Calzoncillos</a></li>
+                        <li><a class="dropdown-item" href="{{path('category_show',{id:5})}}">Calcetines</a></li> 
                     </ul>
             </div>
             <div class="nav-item dropdown box" id="rightnavbar"> 
@@ -37,14 +37,15 @@
                     Mujer
                 </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-    {#                          <li><a class="dropdown-item" href="{{path('Registrar-Posts')}}">Pijamas</a></li>
-                         <li><a class="dropdown-item" href="{{path('registro')}}">Camisetas interiores</a></li>
-                        <li><a class="dropdown-item" href="{{path('app_login')}}">Fajas</a></li>
-                        <li><a class="dropdown-item" href="{{path('app_login')}}">Sujetadores</a></li>
-                        <li><a class="dropdown-item" href="{{path('app_login')}}">Bragas</a></li>
-                        <li><a class="dropdown-item" href="{{path('app_login')}}">Tangas</a></li>
-                        <li><a class="dropdown-item" href="{{path('app_login')}}">Calcetines</a></li>
-                        <li><a class="dropdown-item" href="{{path('app_login')}}">Picardia</a></li> #}
+                        <li><a class="dropdown-item" href="{{path('category_show',{id:6})}}">Pijamas</a></li>
+                        <li><a class="dropdown-item" href="{{path('category_show',{id:7})}}">Camisetas interiores</a></li>
+                        <li><a class="dropdown-item" href="{{path('category_show',{id:8})}}">Bikinis</a></li>
+                        <li><a class="dropdown-item" href="{{path('category_show',{id:9})}}">Fajas</a></li>
+                        <li><a class="dropdown-item" href="{{path('category_show',{id:10})}}">Sujetadores</a></li>
+                        <li><a class="dropdown-item" href="{{path('category_show',{id:11})}}">Bragas</a></li>
+                        <li><a class="dropdown-item" href="{{path('category_show',{id:12})}}">Tangas</a></li>
+                        <li><a class="dropdown-item" href="{{path('category_show',{id:13})}}">Calcetines</a></li>
+                        <li><a class="dropdown-item" href="{{path('category_show',{id:14})}}">Picardia</a></li> 
                     </ul>
             </div>
 
