--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,10 +26,16 @@
                         </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="{{path('category_show',{id:1})}}">Pijamas</a></li>
-                        <li><a class="dropdown-item" href="{{path('category_show',{id:2})}}">Camisetas interiores</a></li>
-                        <li><a class="dropdown-item" href="{{path('category_show',{id:4})}}">Boxer</a></li>
-                        <li><a class="dropdown-item" href="{{path('category_show',{id:5})}}">Calzoncillos</a></li>
-                        <li><a class="dropdown-item" href="{{path('category_show',{id:5})}}">Calcetines</a></li> 
+                        <li><a class="dropdown-item" href="{{path('category_show',{id:4})}}">Bañadores</a></li>
+                        <li><a class="dropdown-item" href="{{path('category_show',{id:6})}}">Camisetas interiores</a></li>
+                        <li><a class="dropdown-item" href="{{path('category_show',{id:8})}}">Batas </a></li>
+                        <li><a class="dropdown-item" href="{{path('category_show',{id:10})}}">Boxer</a></li>
+                        <li><a class="dropdown-item" href="{{path('category_show',{id:11})}}">Calzoncillos</a></li>
+                        <li><a class="dropdown-item" href="{{path('category_show',{id:17})}}">Calcetines</a></li> 
+                        <hr>
+                        <li><a class="dropdown-item" href="{{path('category_show',{id:19})}}">Niños</a></li> 
+                        <hr>
+                        <li><a class="dropdown-item" href="{{path('category_show',{id:21})}}">Otros</a></li> 
                     </ul>
             </div>
             <div class="nav-item dropdown box" id="rightnavbar"> 
@@ -37,15 +43,20 @@
                     Mujer
                 </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="{{path('category_show',{id:6})}}">Pijamas</a></li>
+                        <li><a class="dropdown-item" href="{{path('category_show',{id:2})}}">Pijamas</a></li>
+                        <li><a class="dropdown-item" href="{{path('category_show',{id:5})}}">Bikinis</a></li>
                         <li><a class="dropdown-item" href="{{path('category_show',{id:7})}}">Camisetas interiores</a></li>
-                        <li><a class="dropdown-item" href="{{path('category_show',{id:8})}}">Bikinis</a></li>
-                        <li><a class="dropdown-item" href="{{path('category_show',{id:9})}}">Fajas</a></li>
-                        <li><a class="dropdown-item" href="{{path('category_show',{id:10})}}">Sujetadores</a></li>
-                        <li><a class="dropdown-item" href="{{path('category_show',{id:11})}}">Bragas</a></li>
-                        <li><a class="dropdown-item" href="{{path('category_show',{id:12})}}">Tangas</a></li>
-                        <li><a class="dropdown-item" href="{{path('category_show',{id:13})}}">Calcetines</a></li>
+                        <li><a class="dropdown-item" href="{{path('category_show',{id:12})}}">Sujetadores</a></li>
+                        <li><a class="dropdown-item" href="{{path('category_show',{id:13})}}">Tops</a></li>
+                        <li><a class="dropdown-item" href="{{path('category_show',{id:14})}}">Bragas</a></li>
+                        <li><a class="dropdown-item" href="{{path('category_show',{id:15})}}">Culotes</a></li>
+                        <li><a class="dropdown-item" href="{{path('category_show',{id:16})}}">Tangas</a></li>
+                        <li><a class="dropdown-item" href="{{path('category_show',{id:18})}}">Calcetines</a></li>
                         <li><a class="dropdown-item" href="{{path('category_show',{id:14})}}">Picardia</a></li> 
+                        <hr>
+                        <li><a class="dropdown-item" href="{{path('category_show',{id:20})}}">Niñas</a></li>
+                        <hr>
+                        <li><a class="dropdown-item" href="{{path('category_show',{id:21})}}">Otros</a></li>
                     </ul>
             </div>
 
