--- a/templates/posts/index.html.twig
+++ b/templates/posts/index.html.twig
@@ -12,7 +12,7 @@
             <br>
             <div>
                 <h5>Buscar por nombre</h5>
-                {{ render(controller('App\\Controller\\PostsController:searchBar')) }}                
+                {{ render(controller('App\\Controller\\PostsController:searchbar')) }}                
             </div>
             <br>
             <h5>Filtrar por precio</h5>
