--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -50,44 +50,39 @@
                         <li><a class="dropdown-item" href="{{path('category_id_index',{category:21})}}">Picardia</a></li> 
                     </ul>
             </div>
-
-{#                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="{{path('app_login')}}"></a>
-                        <a class="dropdown-item" href="{{path('cart_index')}}"><i class="fas fa-shopping-cart" id="colorblack"></i></a>
-                </div> #}
-                       {#  <div class="nav-item dropdown" id="rightnavbar"> 
-                            <a class="nav-link dropdown-toggle " href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            -
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <form class="form-inline my-2 my-lg-0">
-                                <div class="input-group input-group-sm mb-3">
-                                    <div class="input-group-prepend"></div>
-                                    <input class="form-control" type="search" placeholder="Type here..." aria-label="Search">
-                                    <button class="btn btn-outline-danger btn-sm" type="submit">Search</button>
-                                </div>
-                                </form>
-                        </div> #}
-                <div class="nav-item dropleft" id="topnavbar"> 
-                   <button type="button" class="btn dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <i class="fas fa-shopping-cart"></i>
-                   </button>
-                        <div class="dropdown-menu">
-                           {{ render(controller('App\\Controller\\CartController:minicart')) }}
-                        </div>
-                </div>
-                <div class="nav-item dropdown" id="topnavbar2">
-                    <button type="button" class="btn dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <i class="far fa-user" id="colorblack"></i>
-                    </button>
-                    <div class="dropdown-menu">   
-                        {{ render(controller('App\\Controller\\SecurityController:minilogin')) }}
-                    </div>
-                </div>
-                <div class="nav-item" id="topnavbar3">
-                    <a href="{{path('posts_index')}}"><i class="fas fa-search"></i></a>               
+            <div class="nav-item dropleft" id="topnavbar"> 
+                <button type="button" class="btn dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <i class="fas fa-shopping-cart"></i>
+                </button>
+                <div class="dropdown-menu">
+                    {{ render(controller('App\\Controller\\CartController:minicart')) }}
                 </div>
             </div>
+            <div class="nav-item dropdown" id="topnavbar2">
+                  <button type="button" class="btn dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <i class="far fa-user" id="colorblack"></i>
+                 </button>
+                 <div class="dropdown-menu">   
+                        {{ render(controller('App\\Controller\\SecurityController:minilogin')) }}
+                 </div>
+            </div>
+            <div class="nav-item dropdown" id="topnavbar3">
+                <button type="button" class="btn dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <i class="fas fa-search"></i>       
+                </button>
+                <div class="dropdown-menu" style="text-align:center">
+                    <p><a href="{{path('posts_index')}}">Todos los articulos</a></p>
+                    <hr>
+                    <p><a href="{{ path('category_index')}}">Buscar por categorías</a></p>
+                    <hr>
+                    <p><a href="{{ path('posts_index')}}">Buscar por rango de precios</a></p>
+                    <hr>
+                    Buscar por
+                    {{ render(controller('App\\Controller\\PostsController:searchbar')) }}
+                </div>
+            </div>
+                 
+            
         </div>
     </nav>
     {% endblock %}         
