--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,13 +10,15 @@
 <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Cardo:400,700|Oswald" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Lora:400,700|Montserrat:300" rel="stylesheet">
+            <script src="https://js.stripe.com/v3/"></script>
+
         {% endblock %}
     </head>
         {% block body %}
         <div class="nav">
             <a href="{{path('dashboard')}}">
                 <img src="{{ asset('img/hjlogo.png') }}"  width="9%" height="125px" class="navbar-brand" id="colorblack" >
-                </a>
+            </a>
         </div>   
     <nav class="navbar navbar-fixed-top ">
         <div class="container">
