--- a/templates/cart/minicart.html.twig
+++ b/templates/cart/minicart.html.twig
@@ -44,10 +44,10 @@
                         <td>{{ total }}</td>
                         <td></td>
             </table>
+            <button type="button" onclick="window.location.href='/carrito'"  class="btn btn-success">Pagar</button>
             {% else %}
             <p>¡No has añadido ningun articulo aún!</p>
         {% endif %}
-        <button type="button" class="btn btn-success">Pagar</button>
         </div>
   </div>
   </div>
