--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -158,7 +158,7 @@ ul li{
 
 /* Fecha de publicacion */
 .publicationDate {
-  font-size: 9px;
+  font-size: 8px;
 }
 
 /* Font Size de Posts */
@@ -184,7 +184,7 @@ ul li{
 .ex2 img {
   height: 175px;
   width: 90%;
-  margin: 15px 0;
+  margin: 15px 5%;
   -webkit-transition: all 1s ease;
   -moz-transition: all 1s ease;
   -ms-transition: all 1s ease;
@@ -194,7 +194,8 @@ ul li{
 .ex2 img:hover {
   height: 200px;
   width: 100%;
-  margin-left: -10px;
+  margin-top: 5px;
+  margin-left: -2px;
 }
 
 /* Botones de entradas de estilos utilizados en dashboard.*/
@@ -205,22 +206,25 @@ ul li{
 
 .button-container a {
   position: absolute;
-  bottom: 1.3em;
-  left: 32%;
+  bottom: 3em;
+  left: 38%;
   background-color: #fff;
-  border-radius: 1.2em;
+  border-radius: 1.8em;
   color: #000;
-  padding: 0.4em 2.2em;
+  padding: 0.8em 3em;
   -webkit-transition: all 0.5s ease;
   -moz-transition: all 0.5s ease;
   -ms-transition: all 0.5s ease;
   transition: all 0.5s ease;
+  font-family: "Oswald", sans-serif;
 }
 
 .button-container a:hover {
-  padding: 0.55em 2.6em;
-  margin-left: -5px;
+  padding: 0.5em 2.5em;
+  margin-left: -15px;
+  margin-bottom: -15px;
   text-decoration: none;
+  font-size: 1.5rem;
 }
 
 /* Carrito */
