--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -7,7 +7,7 @@
             <h1 style="padding-top:1em">Carrito de la compra</h1>
      <div class="container">
         <div class="row text-center login-page">
-	        <div class="col-md-12 login-form">
+	        <div class="col-md-12 login-form" style="padding:3em">
         {% if items | length > 0 %}
             <table class="table">
                 <thead>
@@ -42,10 +42,11 @@
                         <td>{{ total }}</td>
                         <td></td>
             </table>
+                    <a href="{{ path('pagar')}}" type="button" class="btn btn-success">Pagar</a>
+
             {% else %}
             <p>¡No has añadido ningun articulo aún!</p>
         {% endif %}
-        <button type="button" class="btn btn-success">Success</button>
         </div>
   </div>
   </div>
