--- a/templates/posts/category_post.html.twig
+++ b/templates/posts/category_post.html.twig
@@ -14,27 +14,31 @@
                 {% endfor %}
             <div class="row postsRow">
                 {% for post in pagination %}
-                    <div class="col-md-3 cursor">
-                        <div class="bg-white rounded" onclick="window.location.href='{{path('posts_show',{id:post.id})}}'">
-                            <h3>{{post.name}}</h3>
-                                <div class="align-self-center">
-                                    <img class="rounded hoverable" src="{{ asset('uploads/fotos/'~post.foto)}}" width="100%" height="250px">
-                                        <div class="text-center postTextSize">
-                                        <p class="my-2"> Antes : <s>{{post.precioAntes}}</s> <span id="colorRed">Ahora : {{post.precio}} €</span> 
-                                            <button type="button" class="btn btn-light btn-sm">
-                                                <i class="fas fa-cart-arrow-down"></i>
-                                            </button>
-                                            </p>
-                                        </div>
-                                        <div class="publicationDate">
-                                            <br>
-                                            <p><i class="far fa-clock" style="color:#000"></i>
-                                            Fecha de publicación: {{ post.fechaPublicacion | date}}</p>
-                                        </div>
-                                </div>
-                            <hr>
-                        </div>      
-                    </div>
+                        <div class="col-md-3 cursor transparent end">
+                            <div class="bg-white rounded" onclick="window.location.href='{{path('posts_show',{id:post.id})}}'">
+                                <h5>{{post.name}}</h5>
+                                    <div class="align-self-center ex2">
+                                        <img class="rounded hoverable " src="{{ asset('uploads/fotos/'~post.foto)}}" width="90%" height="175px">
+                                    </div>
+                                            <div class="text-center">
+                                                    <a href="{{ path('cart_add' , {'id': post.id})}}" type="button" class="btn btn-outline-danger  btn-lg publicationDate" style="width:45%">
+                                                        Añadir al carrito
+                                                    </a>
+                                                    <a href="{{ path('cart_add' , {'id': post.id})}}" type="button" class="btn btn-outline-success btn-lg publicationDate" style="width:45% ">
+                                                        Comprar
+                                                    </a>
+                                                <p class="my-2 postTextSize"> Antes : <s>{{post.precioAntes}}</s> <span id="colorRed">Ahora : {{post.precio}} €</span></p>
+                                                <p>
+
+                                                </p>
+                                            </div>
+                                            <div class="publicationDate text-center">
+                                                <p><i class="far fa-clock" style="color:#000"></i>
+                                                Fecha de publicación: {{ post.fechaPublicacion | date}}</p>
+                                            </div>
+                                <hr>
+                            </div>      
+                        </div>
                 {% endfor %}
             </div>
         </div>
