--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -58,13 +58,13 @@
                             <div class="bg-white rounded" onclick="window.location.href='{{path('posts_show',{id:post.id})}}'">
                                 <h5>{{post.name}}</h5>
                                     <div class="align-self-center ex2">
-                                        <img class="rounded hoverable " src="{{ asset('uploads/fotos/'~post.foto)}}" width="90%" height="175px">
+                                        <img class="rounded hoverable " src="{{ asset('uploads/fotos/'~post.foto)}}" width="90%" height="210px">
                                     </div>
                                             <div class="text-center">
                                                     <a href="{{ path('cart_add' , {'id': post.id})}}" type="button" class="btn btn-outline-danger  btn-lg publicationDate" style="width:45%">
                                                         Añadir al carrito
                                                     </a>
-                                                    <a href="{{ path('cart_add' , {'id': post.id})}}" type="button" class="btn btn-outline-success btn-lg publicationDate" style="width:45% ">
+                                                    <a href="{{ path('buy_cart' , {'id': post.id})}}" type="button" class="btn btn-outline-success btn-lg publicationDate" style="width:45% ">
                                                         Comprar
                                                     </a>
                                                 <p class="my-2 postTextSize"> Antes : <s>{{post.precioAntes}}</s> <span id="colorRed">Ahora : {{post.precio}} €</span></p>
