--- a/templates/posts/searchbar.html.twig
+++ b/templates/posts/searchbar.html.twig
@@ -1,2 +1,5 @@
+{{ form_start(form) }}
+ {{ form_widget(form) }}
+    <button type="submit" class="btn btn-primary">{{ button_label|default('Buscar') }}</button>
+    {{ form_end(form) }}
 
-    {{ form(form) }}
