--- a/templates/registro/_form.html.twig
+++ b/templates/registro/_form.html.twig
@@ -5,7 +5,7 @@
 
 {% block body %}
   <div class="row justify-content-md-center">
-        <div class="col-8">
+        <div class="col-8 formFont">
         {{ form_start(form) }}
             {{ form_widget(form) }}
             <button class="btn btn-outline-success">{{ button_label|default('Guardar') }}</button>
