--- a/templates/registro/show.html.twig
+++ b/templates/registro/show.html.twig
@@ -6,13 +6,11 @@
 <div class="wrapper bg-white">
     <div class="wrap bg-white">
              <div class="adminbutton" onclick="window.location.href='/administrador'" data-hover="Only for Admin ">
-                    <div>
-                        Cuenta de Usuario
-                    </div>
+                        <h5 class="search">Cuenta de Usuario</h5>
             </div>  
         <hr>
         <br>
-        <h5><span style = "text-decoration: underline;"> Información personal</span></h5>
+        <h5 class="search"><span style = "text-decoration: underline;"> Información personal</span></h5>
         <div class="userStats">
             <form>
             <br>
