--- a/templates/security/minilogin.html.twig
+++ b/templates/security/minilogin.html.twig
@@ -20,7 +20,7 @@
                             <hr>
                             <a href="{{ path('user_editar', {'id': app.user.id} )}}">Ajustes</a>
                             <hr>
-                            <a href="{{ path('app_logout') }}" style="font-size:10px">Salir</a>
+                            <a href="{{ path('app_logout') }}">Salir</a>
                         </div>
                     {% else %}
                     <div class="form-group">
