--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -26,7 +26,6 @@ html {
   font-size: -webkit-calc(4px + 0.45vw);
   font-size: calc(4px + 0.45vw);
 }
-font-family: "Oswald", sans-serif;
 
 body {
   background-color: #fff;
@@ -78,6 +77,8 @@ ul li{
   color: #000 !important;
   right: 45%;
   padding-top: 1.5em;
+  width:9%;
+  height:125px;
 }
 
 .navbar-brand a:hover {
@@ -97,6 +98,10 @@ ul li{
 
 .dropdown-menu a {
   color: #000 !important;
+}
+.dropdown-menu .show{
+  z-index: 4;
+
 }
 #rightnavbar{
   right: 0%;
@@ -156,6 +161,9 @@ ul li{
 #btnLikeControl:checked + label > i {
   color: #FF0120;
 }
+.smallFSize{
+  font-size: 9px;
+}
 
 /* Fecha de publicacion */
 .publicationDate {
@@ -175,13 +183,6 @@ ul li{
 }
 
 /* dashboard articles */
-#h1Title {
-  margin-top: 48em;
-  position: absolute;
-  right: 45%;
-  font-weight: bold;
-}
-
 .ex2 img {
   height: 205px;
   width: 90%;
@@ -316,7 +317,6 @@ ul li{
 .content a {
   display: inline-block;
   font-size: 2rem;
-  text-transform: lowercase;
   padding: 1.5rem;
   padding-top: 20rem;
   opacity: 0;
@@ -524,10 +524,6 @@ footer {
 
 
 /* minilogin */
-.minilogin {
-  right: 30%;
-  width: 115px;
-}
 
 .userStats{
   margin:3em 15em;
@@ -592,3 +588,749 @@ footer {
    #hiddeError{
      display: none;
    }
+
+   .userShowEdit{
+     margin-top: 15em;
+   }
+   
+   /* Responsive mobile 479px */
+   @media only screen and (min-width: 479px){
+    .navbar {
+      font-size: 3.3em;
+    }
+    .navbar-brand {
+      right:36%;
+      width:25%;
+      height:250px;
+    }
+    .nav-link {
+      width: 10em;
+    }
+    .btn{
+      font-size: 0.8em;
+    }
+    #topnavbar {
+      top: 60%;
+      right: 15%;
+    }
+    
+    #topnavbar2 {
+      top: 60%;
+      right: 48%;
+    }
+    #topnavbar3 {
+      top: 60%;
+      right: 80%;
+    }
+    .dropdown-item{
+      font-size: 1.3em;
+    }
+    .dropdown-menu{
+      font-size: 1em;
+    }
+    .dropdown-menu a{
+      font-size: 1em;
+    }
+    .dropdown-menu p{
+      font-size: 1em;
+    }
+    .dropdown-menu h4{
+      font-size: 1em;
+    }
+    .cd-slider {
+      width: 140%;
+      left: -20%;
+      height: 50rem;
+    }
+    .image{
+      width: 89.5%;
+      height: 100%;
+    }
+    .content h2{
+    font-size: 2.5em;
+     }
+     .button-container a {
+      bottom: 5em;
+      left: 40%;
+      font-size: 2.3rem;
+    }
+    
+    .button-container a:hover {
+      margin-left: -30px;
+      margin-bottom: -50px;
+      font-size: 3.4rem;
+    }
+    .row{
+      margin: 10px, -70px;
+    }
+  
+    #colArticles{
+      width: 50%;
+    }
+    #colArticles h5{
+      font-size: 3rem;
+    }
+    #colArticles p{
+      font-size: 20px;
+    }
+    #colDashboard{
+      width: 100%;
+      height: 1000px;
+      margin-bottom: 4em;
+    }
+    #imgDashboard{
+      width: 100%;
+      height: 100%;
+    }
+    .ex2 img{
+      height: 300px;
+      width: 90%;
+    }
+    .ex2 img:hover{
+      height: 350px;
+      width: 105%;
+    }
+    .smallFSize{
+      font-size: 17px;
+    }
+    .publicationDate{
+      font-size: 14px;
+    }
+    .footercontent p{
+      font-size:16.5px;
+    }
+    footer{
+      padding-top: 220px;
+    }
+    .search{
+      font-size:2em;
+    }
+    .navigation{
+      font-size: 3em;
+    }
+    .userStats{
+      font-size: 2.5em;
+      margin: 3em 1em;
+    }
+    .adminbutton{
+    left:35%;
+   }
+   .userShowEdit{
+    margin-top: 30em;
+  }
+  .formFont{
+    font-size: 3em;
+  }
+  .form-control{
+    font-size: 1em;
+  }
+   /*  Responsive computer 1024px */
+
+   @media only screen and (min-width: 1024px){
+   html {
+    font-size: -moz-calc(4px + 0.45vw);
+    font-size: -webkit-calc(4px + 0.45vw);
+    font-size: calc(4px + 0.45vw);
+  }  
+  body {
+    background-color: #fff;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-attachment: fixed;
+    font-family: 'Space Grotesk', sans-serif;
+    color: #000;
+    font-size: 1.1em;
+    letter-spacing: 0.5px;
+  }
+  
+  h1, h3, h4, h5, h6 {
+    font-family: "Oswald", sans-serif;
+    text-transform: uppercase;
+    color: #000;
+    text-align: center;
+  }
+  
+  a {
+    color: #000;
+  }
+  
+  ul li{
+    text-decoration: none;
+  }
+  
+  *:focus {
+    outline: 0;
+  }
+  .navbar {
+    background-color: #fff !important;
+    font-size: 1.3em;
+    max-height: 3.3em;
+    padding-bottom: 3em;
+    text-decoration: none;
+    font-weight: 900;
+    font-size: 1.2rem;
+    letter-spacing: 2px;
+    font-family: "Oswald", sans-serif;
+    padding-top: 10em;
+  }
+  
+  .navbar-brand {
+    z-index: 3;
+    position: absolute;
+    align-content: center;
+    font-size: 2em;
+    color: #000 !important;
+    right: 45%;
+    padding-top: 1.5em;
+    width:9%;
+    height:125px;
+  }
+  
+  .navbar-brand a:hover {
+    text-decoration: none;
+  }
+  
+  .nav-link {
+    color: #000 !important;
+    width: 25em;
+    text-align: center;
+    margin-bottom: 3.5em;
+  }
+  
+  .cursor:hover {
+    cursor: pointer;
+  }
+  
+  .dropdown-menu a {
+    color: #000 !important;
+  }
+  #rightnavbar{
+    right: 0%;
+  }
+  #topnavbar {
+    font-family: "signikaregular";
+    position: absolute;
+    top: 35%;
+    right: 13%;
+  }
+  
+  #topnavbar2 {
+    font-family: "signikaregular";
+    position: absolute;
+    top: 35%;
+    right: 10%;
+  }
+  #topnavbar3 {
+    font-family: "signikaregular";
+    position: absolute;
+    top: 35%;
+    right: 7%;
+    text-align: center;
+  }
+  
+  /* Colors */
+  #colorblack {
+    color: #000;
+  }
+  
+  #colorRed {
+    color: #FF0120;
+  }
+  
+  #tachado{
+    text-decoration: line-through;
+  }
+  .imgpost {
+    width: 300px;
+    height: 375px;
+    border-radius: 2%;
+  }
+  
+  .postsRow {
+    margin-top: 5em;
+  }
+  
+  /* Likes */
+  .btnLikeColor:hover {
+    color: #FF0120;
+  }
+  
+  #btnLikeControl {
+    display: none;
+  }
+  
+  #btnLikeControl:checked + label > i {
+    color: #FF0120;
+  }
+  .smallFSize{
+    font-size: 9px;
+  }
+  /* Fecha de publicacion */
+  .publicationDate {
+    font-size: 8px;
+  }
+  
+  /* Font Size de Posts */
+  .postTextSize {
+    font-size: 13px;
+  }
+  
+  /* Nav bar dropdown fixed-top-right*/
+  .navbarTopDrop {
+    position: absolute;
+    top: 120px;
+    left: 50em;
+  }
+  
+  /* dashboard articles */
+  
+  .ex2 img {
+    height: 205px;
+    width: 90%;
+    margin: 15px 5%;
+    -webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -ms-transition: all 1s ease;
+    transition: all 1s ease;
+  }
+  
+  .ex2 img:hover {
+    height: 225px;
+    width: 100%;
+    margin-top: 10px;
+    margin-left: -2px;
+  }
+  
+  /* Botones de entradas de estilos utilizados en dashboard.*/
+  .button-container {
+    display: inline-block;
+    position: relative;
+  }
+  
+  .button-container a {
+    position: absolute;
+    bottom: 3em;
+    left: 35%;
+    background-color: #fff;
+    border-radius: 1.8em;
+    color: #000;
+    padding: 0.8em 3em;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -ms-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+    font-family: "Oswald", sans-serif;
+    font-size: 1.2rem;
+  
+  }
+  
+  .button-container a:hover {
+    padding: 0.6em 2.5em;
+    margin-left: -11px;
+    margin-bottom: -15px;
+    text-decoration: none;
+    font-size: 1.6rem;
+  }
+  
+  /* Carrito */
+  .containerOwnApp {
+    box-shadow: 0 0 27px 0 rgba(84, 84, 84, 0.62);
+  }
+  
+  .login-page {
+    padding: 5% 0 0;
+    margin: 0 auto 100px;
+    max-width: 575px;
+    position: relative;
+  }
+  
+  .login-form {
+    box-shadow: 0 0 27px 0 rgba(84, 84, 84, 0.62);
+  }
+  
+  .textDecorationNone {
+    text-decoration: none;
+  }
+  
+  .textDecorationNone a:hover {
+    text-decoration: none;
+  }
+  
+  /* Slider dashboard */
+  * {
+    box-sizing: border-box;
+  }
+  
+  /* Slider Style
+  --------------------------------------*/
+  .cd-slider {
+    position: relative;
+    width: 100%;
+    height: 50rem;
+    overflow: hidden;
+    left:0%
+  }
+  
+  .cd-slider li {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    visibility: hidden;
+    transition: visibility 0s 1s;
+    will-change: visibility;
+  }
+  
+  .image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 89.5%;
+    height: 100%;
+    background-size: cover;
+    background-position: 50% 50%;
+    clip: rect(0, 120rem, 50rem, 120rem);
+    transition: clip 0.5s cubic-bezier(0.99, 0.01, 0.45, 0.9) 0.5s;
+    will-change: clip;
+  }
+  
+  .content {
+    position: absolute;
+    width: 28%;
+    right: 0;
+    height: 100%;
+    padding: 2rem 0 0 2rem;
+    text-align: right;
+  }
+  
+  .content h2 {
+    font-family: "Montserrat", sans-serif;
+    text-transform: uppercase;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    transform: translateY(-30%);
+    opacity: 0;
+    transition: transform 0.5s, opacity 0.5s;
+    will-change: transform, opacity;
+    font-size: 4rem;
+  }
+  
+  .content a {
+    display: inline-block;
+    font-size: 2rem;
+    text-transform: lowercase;
+    padding: 1.5rem;
+    padding-top: 20rem;
+    opacity: 0;
+    transform: translateY(-100%);
+    transition: transform 0.5s 0.1s, opacity 0.5s 0.1s;
+    will-change: transform, opacity;
+  }
+  
+  /* Current Slide 
+  -------------------------------------*/
+  li.current {
+    visibility: visible;
+    transition-delay: 0s;
+  }
+  
+  li.current .image {
+    clip: rect(0, 120rem, 50rem, 0);
+  }
+  
+  li.current .content h2 {
+    transform: translateY(0);
+    opacity: 1;
+    transition-delay: 1s;
+  }
+  
+  li.current .content a {
+    transform: translateY(0);
+    opacity: 1;
+    transition-delay: 1.1s;
+  }
+  
+  /* Prev Slide 
+  ------------------------------------*/
+  li.prev_slide .content {
+    clip: rect(0, 0, 50rem, 0);
+  }
+  
+  nav {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    z-index: 2;
+  }
+  
+  .prev, .next, .counter {
+    vertical-align: middle;
+  }
+  
+  .prev, .next {
+    position: relative;
+    display: inline-block;
+    height: 2rem;
+    width: 2rem;
+    border: 0;
+    cursor: pointer;
+    background: transparent;
+  }
+  
+  .prev::before, .next::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+    border: 0.3rem solid transparent;
+    border-right-width: 1rem;
+    border-right-color: #000;
+    border-left-width: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  .prev::after, .next::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%) translateZ(0);
+    left: 0.2rem;
+    background: #000;
+    height: 0.1rem;
+    min-height: 1px;
+    width: 0.8rem;
+    transition: width 0.3s;
+  }
+  
+  .next::before {
+    right: 0;
+    left: auto;
+    border-left-width: 1rem;
+    border-left-color: #000;
+    border-right-width: 0;
+  }
+  
+  .next::after {
+    right: 0.2rem;
+    left: auto;
+  }
+  
+  .counter {
+    display: inline-block;
+    font-size: 2rem;
+    font-family: serif;
+    font-style: italic;
+  }
+  
+  .counter span:last-child::before {
+    content: "/";
+    margin: 0 1rem;
+  }
+  
+  .prev:hover::after, .next:hover::after {
+    width: 1.7rem;
+  }
+  
+  /* Footer */
+  .transparent {
+    background: transparent !important;
+  }
+  
+  .fluid .wrap {
+    max-width: 100% !important;
+  }
+  
+  .fluid .wrap.sticky header {
+    max-width: 100% !important;
+  }
+  
+  footer {
+    background: #333;
+    padding: 50px;
+    width: 100%;
+    border-radius: 0;
+    position: relative;
+    bottom: 0;
+  }
+  
+  .logo {
+    background: #efefef;
+    width: 12em;
+    height: 11em;
+    border-radius: var(--text-radius);
+  }
+  
+  .logonav {
+    height: 20px;
+    width: 20px;
+  }
+  
+  .footernav {
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translate(-50px, -50%);
+  }
+  
+  footer ul li {
+    display: inline-block;
+    list-style: none;
+    width: 20px;
+    height: 20px;
+    background: grey;
+    border-radius: var(--text-radius);
+    margin-right: 10px;
+    z-index: 2;
+  }
+  
+  .wrap {
+    z-index: 1;
+    position: relative;
+    height: 100%;
+    padding: 50px 0 0 0;
+    background: #ddd;
+  }
+  
+  .wrapper {
+    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.8);
+    z-index: 1;
+  }
+  
+  footer {
+    position: relative;
+    bottom: 0;
+    z-index: -3;
+    height: 200px;
+    background: grey;
+  }
+  
+  .footercontent {
+    position: fixed;
+    z-index: 1;
+    left: 50%;
+    bottom: 30px;
+    transform: translate(-50%, 0);
+    width: 100%;
+    padding: 0 50px;
+  }
+  #contactfooter{
+    margin-top:4em;
+    margin-left: 8em;
+    font-size: 0.8em;
+    }
+  .end {
+    margin-bottom: 35px;
+  }
+  
+  
+  /* minilogin */
+  .minilogin {
+    right: 30%;
+    width: 115px;
+  }
+  
+  .userStats{
+    margin:3em 15em;
+    font-size: 1.5em;
+    }
+  
+  /*# sourceMappingURL=stylesheet.css.map */
+   
+  /* User / admin */
+  *, *:before, *:after{
+    box-sizing: border-box;
+    padding: 0; margin: 0;
+    text-decoration: none;
+    color: #111;
+  }
+  
+  
+      .adminbutton {
+        width: 30em;
+        left: 40%;
+        background: transparent; 
+        outline: none;
+        position: relative;
+        border: none;
+        padding: 15px 50px;
+        overflow: hidden;
+      }
+  
+      /*button:before (attr data-hover)*/
+      .adminbutton:hover:before{opacity: 1; transform: translate(0,0);
+      left:4.05em;  }
+      .adminbutton:before{
+        content: attr(data-hover);
+        position: absolute;
+        top: 1.1em; left: 0;
+        text-transform: uppercase;
+        font-weight: 800;
+        font-size: 1.6em;
+        opacity: 0;
+        transform: translate(-100%,0);
+        transition: all 10s ease-in-out;
+      }
+        /*button div (button text before hover)*/
+       .adminbutton:hover div{opacity: 0; transform: translate(100%,0)}
+        .adminbutton div{
+          text-transform: uppercase;
+          font-weight: 800;
+          font-size: 1.6em;
+          transition: all 10s ease-in-out;
+        }
+        .contenedor-modal {
+          position: absolute;
+          width: 100%;
+          height: 10%;
+        }
+        
+        .contenedor-modal button {
+          position: relative;
+          top: -50%;
+          right: -100%;
+        }
+     #hiddeError{
+       display: none;
+     }
+     #showCol{
+      width: 20%;
+    }
+    #colArticles{
+      width: 25%;
+    }
+    #colDashboard{
+      width: 29.5%;
+      height: 450px;
+      margin: 1.7em;
+    }
+    #imgDashboard{
+      width: 100%;
+      height: 450px;
+    }
+    }
+    @media only screen and (min-width: 1200px){
+      .imgpost {
+        width: 350px;
+        height: 425px;
+        border-radius: 2%;
+      }
+    #showCol{
+      width: 30%;
+    }
+    #colArticles{
+      width: 23%;
+      margin: 1em;;
+    }
+    #colDashboard{
+      width: 30%;
+      height: 450px;
+      margin: 1.7em;
+    }
+    #imgDashboard{
+      width: 100%;
+      height: 450px;
+    }
+  }
