--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -10,77 +10,74 @@
                     <li>
                         <div class="image" style="background-image:url( {{ asset('img/login.jpg') }} );"></div>
                         <div class="content">
-                        <h2>Colección Lenceria 2020</h2>
-                        <a href="{{path('category_id_index',{category:12})}}">Ver todo</a>
+                            <h2>Colección Lenceria 2020</h2>
+                            <a href="{{path('category_id_index',{category:12})}}">Ver todo</a>
                         </div>
                     </li>
                     <li>
                         <div class="image" style="background-image:url( {{ asset('img/pijamas.png') }} );"></div>
                         <div class="content">
-                        <h2>Pijamas Invierno 2020</h2>
-                        <a href="{{path('category_id_index',{category:2})}}">Ver todo</a>
+                            <h2>Pijamas Invierno 2020</h2>
+                            <a href="{{path('category_id_index',{category:2})}}">Ver todo</a>
                         </div>
                     </li>
                     <li>
                         <div class="image" style="background-image:url( {{ asset('img/bikinis.jpg') }} );"></div>
                         <div class="content">
-                        <h2>Nueva Coleccion Bikinis</h2>
-                        <a href="{{path('category_id_index',{category:5})}}">Ver todo</a>
+                            <h2>Nueva Coleccion Bikinis</h2>
+                            <a href="{{path('category_id_index',{category:5})}}">Ver todo</a>
                         </div>
                     </li>
                     </ul>
                 </div> <!--/.cd-slider-->
                 <div class="row postsRow">
-                        <div class="col-md-4 pb-2">
-                            <div class="bg-white rounded  button-container">              
-                                <img class="rounded hoverable" src="{{ asset('img/pijama.jpg')}}" width="100%" height="450px">
-                                <a href="{{path('category_id_index',{category:2})}}" alt="Pijamas">Pijamas</a>
-                            </div>
+                    <div id="colDashboard">
+                        <div class="bg-white rounded  button-container" id="imgDashboard">              
+                             <img class="rounded hoverable" src="{{ asset('img/pijama.jpg')}}" width="100%" height="100%">
+                              <a href="{{path('category_id_index',{category:2})}}" alt="Pijamas">Pijamas</a>
                         </div>
-                        <div class="col-md-4 pb-5">
-                            <div class="bg-white rounded button-container">
-                                <img class="rounded hoverable" src="{{ asset('img/sujetador.jpg')}}" width="100%" height="450px">
-                                <a href="{{path('category_id_index',{category:12})}}" alt="Sujetadores">Lenceria</a>
-
-                            </div>
+                    </div>
+                    <div id="colDashboard">
+                        <div class="bg-white rounded button-container" id="imgDashboard">
+                              <img class="rounded hoverable" src="{{ asset('img/sujetador.jpg')}}" width="100%" height="100%">
+                               <a href="{{path('category_id_index',{category:12})}}" alt="Sujetadores">Lenceria</a>
                         </div>
-                        <div class="col-md-4 pb-5">
-                            <div class="bg-white rounded  button-container">
-                                <img class="rounded hoverable" src="{{ asset('img/top.jpg')}}" width="100%" height="450px">
-                                <a href="{{path('category_id_index',{category:13})}}" alt="Tops">Tops</a>
-                            </div>
+                    </div>
+                    <div id="colDashboard">
+                        <div class="bg-white rounded  button-container" id="imgDashboard">
+                             <img class="rounded hoverable" src="{{ asset('img/top.jpg')}}" width="100%" height="100%">
+                               <a href="{{path('category_id_index',{category:13})}}" alt="Tops">Tops</a>
                         </div>
-                        <div class="row" id="h1Title">
-                                <h1>Articulos más nuevos</h1>
-                        </div>
-                        {% for post in posts %}
-                        <div class="col-md-3 cursor transparent end" style="margin-top:5em">
+                    </div>
+                </div>
+                <div>
+                    <h1>Articulos más nuevos</h1>
+                </div>
+                <div class="row">
+                    {% for post in posts %}
+                        <div class="cursor transparent end" id="colArticles">
                             <div class="bg-white rounded" onclick="window.location.href='{{path('posts_show',{id:post.id})}}'">
                                 <h5>{{post.name}}</h5>
                                     <div class="align-self-center ex2">
-                                        <img class="rounded hoverable " src="{{ asset('uploads/fotos/'~post.foto)}}" width="90%" height="210px">
+                                        <img class="rounded hoverable " src="{{ asset('uploads/fotos/'~post.foto)}}" width="90%">
                                     </div>
-                                            <div class="text-center">
-                                                    <a href="{{ path('cart_add' , {'id': post.id})}}" type="button" class="btn btn-outline-danger  btn-lg publicationDate" style="width:45%">
-                                                        Añadir al carrito
-                                                    </a>
-                                                    <a href="{{ path('buy_cart' , {'id': post.id})}}" type="button" class="btn btn-outline-success btn-lg publicationDate" style="width:45% ">
-                                                        Comprar
-                                                    </a>
-                                                <p class="my-2 postTextSize"> Unidad : {{post.precioAntes}} <span id="colorRed">Paquete : {{post.precio}} €</span></p>
-                                                <p>
-
-                                                </p>
-                                            </div>
-                                            <div class="publicationDate text-center">
-                                                <p><i class="far fa-clock" style="color:#000"></i>
-                                                Fecha de publicación: {{ post.fechaPublicacion | date}}</p>
-                                            </div>
-                                    
+                                    <div class="text-center">
+                                          <a href="{{ path('cart_add' , {'id': post.id})}}" type="button" class="btn btn-outline-danger  btn-lg smallFSize" style="width:45%">
+                                              Añadir al carrito
+                                          </a>
+                                          <a href="{{ path('buy_cart' , {'id': post.id})}}" type="button" class="btn btn-outline-success btn-lg smallFSize" style="width:45% ">
+                                             Comprar
+                                         </a>
+                                        <p class="my-2 postTextSize"> Unidad : {{post.precioAntes}} <span id="colorRed">Paquete : {{post.precio}} €</span></p>
+                                    </div>
+                                    <div class="publicationDate text-center">
+                                        <i class="far fa-clock" style="color:#000"></i>
+                                           Fecha de publicación: {{ post.fechaPublicacion | date}}
+                                    </div>
                                 <hr>
                             </div>      
                         </div>
-                        {% endfor %}
+                    {% endfor %}
                 </div>
             </div>
         </div>
