--- a/templates/posts/category_post.html.twig
+++ b/templates/posts/category_post.html.twig
@@ -14,9 +14,9 @@
                 {% endfor %}
             <div class="row postsRow">
                 {% for post in pagination %}
-                        <div class="col-md-3 cursor transparent end">
-                            <div class="bg-white rounded" onclick="window.location.href='{{path('posts_show',{id:post.id})}}'">
-                                <h5>{{post.name}}</h5>
+                        <div class="cursor transparent end"   id="colArticles">
+                            <div class="bg-white rounded" onclick="window.location.href='{{path('posts_show',{id:post.id})}}'" >
+                                <h5 >{{post.name}}</h5>
                                     <div class="align-self-center ex2">
                                         <img class="rounded hoverable " src="{{ asset('uploads/fotos/'~post.foto)}}" width="90%" height="210px">
                                     </div>
@@ -27,14 +27,14 @@
                                                     <a href="{{ path('buy_cart' , {'id': post.id})}}" type="button" class="btn btn-outline-success btn-lg publicationDate" style="width:45% ">
                                                         Comprar
                                                     </a>
-                                                <p class="my-2 postTextSize"> Unidad : {{post.precioAntes}} <span id="colorRed">Paquete : {{post.precio}} €</span></p>
+                                                <p class="my-2">Precio Pqt : {{post.precio}} / <span id="colorRed">Precio Ud : {{post.precioAntes}}€</span></p>
                                                 <p>
 
                                                 </p>
                                             </div>
                                             <div class="publicationDate text-center">
-                                                <p><i class="far fa-clock" style="color:#000"></i>
-                                                Fecha de publicación: {{ post.fechaPublicacion | date}}</p>
+                                                <i class="far fa-clock" style="color:#000"></i>
+                                                Fecha de publicación: {{ post.fechaPublicacion | date}}
                                             </div>
                                 <hr>
                             </div>      
