--- a/templates/posts/show.html.twig
+++ b/templates/posts/show.html.twig
@@ -13,17 +13,17 @@
             <br>
 
             <div class="row no-gutters" style="margin-bottom:5em;">
-                <div class="col-lg-4">
+                <div class="col-lg-4" id="showCol">
                         <div class="align-self-center">
                             <img class="imgpost" src="{{asset('uploads/fotos/')~post.foto}}">
                         </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4" id="showCol">
                         <div class="align-self-center">
                             <img class="imgpost" src="{{asset('uploads/fotos/')~post.fotob}}">
                         </div>
                 </div> 
-                <div class="col-lg-4">
+                <div class="col-lg-4" id="showCol">
                     <br>
                     <h3>{{post.name}}</h3>
                     <br>
@@ -50,7 +50,7 @@
                         <br>
                         <br>
                         <br>
-                        <p class="my-2 postTextSize"> Unidad : {{post.precioAntes}} <span id="colorRed">Paquete : {{post.precio}} €</span></p>
+                        <p class="my-2">Precio Pqt : {{post.precio}} / <span id="colorRed">Precio Ud : {{post.precioAntes}}€</span></p>
                         <br>
                         <p>Quedan {{post.stock}} en stock</p>
                     </div>
