--- a/templates/registro/edit.html.twig
+++ b/templates/registro/edit.html.twig
@@ -9,7 +9,7 @@
             <img src="{{ asset('img/hjlogo.png') }}"  width="9%" height="125px" class="navbar-brand" id="colorblack" >
         </a>
     </div>
-    <div class="container" style="margin-top:15em">
+    <div class="container userShowEdit">
         <h4>Editar cuenta de usuario</h4>
 
         {{ include('registro/_form.html.twig', {'button_label': 'Guardar cambios'}) }}
